--- a/templates/admin-enquiry.html
+++ b/templates/admin-enquiry.html
@@ -85,6 +85,32 @@
         background-color: #eeeeff;
         background-clip: content-box;
       }
+
+      .centered-button {
+            height: 40px; /* Adjust the height as needed */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: rgb(42, 240, 11);
+        }
+
+        .centered-button:hover{
+            background-color: rgb(34, 220, 5) !important;
+            border: none !important;
+        }
+
+        .centered-button-t {
+            height: 40px; 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: rgb(255, 0, 0);
+        }
+
+        .centered-button-t:hover{
+            background-color: rgb(233, 0, 0) !important;
+            border: none !important;
+        }
     </style>
   </head>
 
@@ -129,18 +155,20 @@
         </aside>
         <main class="col overflow-auto h-100">
           <div class="bg-light border rounded-3 p-3">
-            <h2>IP Tracker</h2>
+            <h2>Enquiries</h2>
             <table class="table table-hover table-bordered table-responsive mt-5">
-              <caption class="text-center">List of visited users</caption>
+              <caption class="text-center">List of In Progress Enquiries</caption>
               <thead>
                 <th>Enquiries</th>
                 <th>Status</th>
+                <th class="text-center ">Action</th>
               </thead>
               <tbody>
                 {% for en in allEnquiry %}
                 <tr>
                   <td><a href="{{url_for('enquiryChatAdmin', chatId=en.chatId)}}" style="letter-spacing: normal;">{{en.chatTitle}}</a></td>
-                  <td>{{en.status}}</td>
+                  <td>In Progress</td>
+                  <td class="d-flex justify-content-center "><button class="btn btn-danger centered-button" type="button" style="height: 30px;">Terminate</button></td>
                 </tr>
                 {% endfor %}
               </tbody>
@@ -149,6 +177,10 @@
         </main>
       </div>
     </div>
+
+    <script>
+      
+    </script>
     <!-- Vendor JS Files -->
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
