--- a/templates/base.html
+++ b/templates/base.html
@@ -30,6 +30,11 @@
   <link href="{{ url_for('static', filename='assets/css/style.css')}}" rel="stylesheet" />
 
   <style>
+
+    *{
+      font-family: "Lato", Helvetica, Arial, sans-serif;
+    }
+
     .nav-cus {
       background-color: #eba200;
       text-align: center;
