--- a/templates/base.html
+++ b/templates/base.html
@@ -31,8 +31,8 @@
 
   <style>
 
-    *{
-      font-family: "Lato", Helvetica, Arial, sans-serif;
+    h1, h2, h3, h4, h5, h6, p, a, span{
+      font-family: "Lato", Helvetica, Arial, sans-serif !important;
     }
 
     .nav-cus {
