--- a/templates/admin-enquiry.html
+++ b/templates/admin-enquiry.html
@@ -142,7 +142,7 @@
       var chatId = btn.getAttribute('data-chatId');
       var tr = btn.closest('tr');
       tr.remove();
-      alert(chatId);
+      //alert(chatId);
       // Create an object to send as JSON data
       var formData = new FormData();
 
