--- a/templates/admin.html
+++ b/templates/admin.html
@@ -96,7 +96,7 @@
             href="#"
             class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-dark text-decoration-none"
           >
-            <i class="bi bi-bootstrap fs-2 text-dark"></i>
+             <img src="../static/assets/img/tarumt-logo1.png" class="img-fluid"/>
           </a>
         </div>
       </div>
@@ -122,24 +122,6 @@
                 <a href="{{url_for('adminEnquiry')}}" class="nav-link px-2 text-truncate">
                   <i class="bi bi-speedometer fs-5"></i>
                   <span class="d-none d-sm-inline">Enquiries</span>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link px-2 text-truncate"
-                  ><i class="bi bi-card-text fs-5"></i>
-                  <span class="d-none d-sm-inline">Orders</span>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link px-2 text-truncate"
-                  ><i class="bi bi-bricks fs-5"></i>
-                  <span class="d-none d-sm-inline">Products</span>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link px-2 text-truncate"
-                  ><i class="bi bi-people fs-5"></i>
-                  <span class="d-none d-sm-inline">Customers</span>
                 </a>
               </li>
             </ul>
