--- a/templates/admin-enquiry.html
+++ b/templates/admin-enquiry.html
@@ -73,7 +73,7 @@
     <div class="container-fluid align-items-center d-flex">
       <div class="flex-shrink-1">
         <a href="#" class="d-flex align-items-center col-lg-4 mb-2 mb-lg-0 link-dark text-decoration-none">
-          <i class="bi bi-bootstrap fs-2 text-dark"></i>
+          <img src="../static/assets/img/tarumt-logo1.png" class="img-fluid"/>
         </a>
       </div>
     </div>
