--- a/templates/programme.html
+++ b/templates/programme.html
@@ -33,18 +33,18 @@
 
   <div class="row mt-5">
     <div class="">
-      <ul class="nav justify-content-center nav-tabs nav-justified">
-        <li class="nav-item "><a class="nav-link active" data-bs-toggle="tab" href="#doctor">
-            <div class="">Doctor of Philosophy</div>
+      <ul class="nav justify-content-center nav-tabs nav-justified navbar-dark">
+        <li class="nav-item "><a class="nav-link active text-dark" data-bs-toggle="tab" href="#doctor">
+            <strong>Doctor of Philosophy</strong>
           </a></li>
-        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#master">
-            <div class="">Master Degree</div>
+        <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#master">
+            <strong>Master Degree</strong>
           </a></li>
-        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#bachelor">
-            <div class="">Bachelor</div>
+        <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#bachelor">
+            <strong>Bachelor</strong>
           </a></li>
-        <li class="nav-item "><a class="nav-link" data-bs-toggle="tab" href="#diploma">
-            <div class="">Diploma</div>
+        <li class="nav-item "><a class="nav-link text-dark" data-bs-toggle="tab" href="#diploma">
+            <strong>Diploma</strong>
           </a></li>
       </ul>
     </div>
