--- a/templates/base.html
+++ b/templates/base.html
@@ -318,7 +318,7 @@
       <div class="row">
         <div class="col-md">
           <div class="footer-logo">
-            <a class="navbar-brand" href="#">Contact Us</a>
+            <a class="navbar-brand">Contact Us</a>
             <p>
               FACULTY OF COMPUTING AND INFORMATION TECHNOLOGY <br />
               TUNKU ABDUL RAHMAN UNIVERSITY OF MANAGEMENT AND TECHNOLOGY
@@ -339,7 +339,7 @@
 
         <div class="col-md">
           <div class="list-menu">
-            <h4>Locations</h4>
+            <h3>Locations</h3>
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7967.075625883707!2d101.72655700000001!3d3.215255!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31cc3843bfb6a031%3A0x2dc5e067aae3ab84!2sTunku%20Abdul%20Rahman%20University%20of%20Management%20and%20Technology%20(TAR%20UMT)!5e0!3m2!1sen!2sus!4v1694603779903!5m2!1sen!2sus"
               height="450" style="border: 0; width: 100%;" allowfullscreen="" loading="lazy"
