--- a/templates/facilities.html
+++ b/templates/facilities.html
@@ -9,7 +9,7 @@ content %}
     <div class="text pt-5 text-center">
         <h2>Facilities</h2>
     </div>
-    <div class="list d-flex justify-content-center align-items-center">
+    <div class="list d-flex justify-content-center align-items-center mt-4 ">
         <div class="row">
             <div class="col-md">
                 <li>Microsoft Lab</li>
