updated programme page button

--- a/templates/compareProg.html
+++ b/templates/compareProg.html
@@ -10,6 +10,15 @@
     text-align: justify;
   text-justify: inter-word;
   }
+
+  .btn{
+    background-color: #eba200;
+    border-radius: 0%;
+  }
+
+  .btn:hover {
+    background-color: #c98900;
+    }
 </style>
 
 <div
@@ -49,8 +58,8 @@
     <div class="row">
       <div class="col">
 
-        <div class="dropdown">
-          <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+        <div class="dropdown d-grid my-2">
+          <button type="button" class="btn dropdown-toggle " data-bs-toggle="dropdown">
             Select Programme
           </button>
           <ul class="dropdown-menu">
@@ -67,8 +76,8 @@
 
       <div class="col">
 
-        <div class="dropdown">
-          <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+        <div class="dropdown d-grid my-2">
+          <button type="button" class="btn dropdown-toggle " data-bs-toggle="dropdown">
             Select Programme
           </button>
           <ul class="dropdown-menu">
