--- a/templates/cictis.html
+++ b/templates/cictis.html
@@ -15,7 +15,7 @@ CENTRE FOR ICT INNOVATIONS AND CREATIVITY
     <div class="cell-md-12">
       <div class="list-order">
         <p style="text-align: center;">
-          <img src="../static/assets/img/why-us.png" alt="" width="200" height="260" /></p>
+          <img src="../static/assets/img/reseach1.jpg" alt="" width="200" height="260" /></p>
         <p style="text-align: center;"><strong>RC Lead: Ts. Ong Jia Hui</strong></p>
         <p style="text-align: left;">Location: FOCS Laboratories, Block B, TAR UMT Main Campus</p>
         <h4>i. Objectives</h4>
@@ -71,7 +71,7 @@ CENTRE FOR ICT INNOVATIONS AND CREATIVITY
             </tr>
             <tr>
               <td>
-                <p><img src="../static/assets/img/why-us.png" alt=""
+                <p><img src="../static/assets/img/reseach2.jpg" alt=""
                     width="109" height="141" /></p>
                 <p><strong>Workgroup Leader: Dr. See Kwee Teck</strong></p>
                 <p style="text-align: justify;">This research group aims to develop commercial viable or
@@ -91,7 +91,7 @@ CENTRE FOR ICT INNOVATIONS AND CREATIVITY
                 </ol>
               </td>
               <td>
-                <p><img src="../static/assets/img/why-us.png" alt=""
+                <p><img src="../static/assets/img/reseach3.jpg" alt=""
                     width="109" height="141" /></p>
                 <p><strong><span>Workgroup leader: Mr. Andrew Tan Khin Huat</span></strong></p>
                 <p style="text-align: justify;"><span>This working group aims to provide a platform for research
@@ -123,7 +123,7 @@ CENTRE FOR ICT INNOVATIONS AND CREATIVITY
             </tr>
             <tr>
               <td>
-                <p><img src="../static/assets/img/why-us.png" alt=""
+                <p><img src="../static/assets/img/reseach4.jpg" alt=""
                     width="111" height="144" /></p>
                 <p><strong><span>Workgroup leader: Dr Glaret Shirley a/p Sinnappan</span></strong></p>
                 <p style="text-align: justify;">Project topics include adaptive learning system that enables
@@ -153,7 +153,7 @@ CENTRE FOR ICT INNOVATIONS AND CREATIVITY
                 </ul>
               </td>
               <td>
-                <p><img src="../static/assets/img/why-us.png" alt=""
+                <p><img src="../static/assets/img/reseach5.jpg" alt=""
                     width="109" height="142" /></p>
                 <p><strong><span>Workgroup leader: Voo Nyuk Mee</span></strong></p>
                 <p style="text-align: justify;"><span>With close collaboration with DIPD, IDIS, SEER, and other
