--- a/templates/staffDirectory.html
+++ b/templates/staffDirectory.html
@@ -21,6 +21,7 @@
 >
   <div class="row mt-5">
     <div class="col-md-8">
+      <h4>FACULTY OF COMPUTING AND INFORMATION TECHNOLOGY</h4>
       {% for staff in staffs.items %}
       <div class="row">
         <div class="col">
